--- a/Main/index.html
+++ b/Main/index.html
@@ -22,14 +22,29 @@
 
     <header></header>
 
-    <main>
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis suscipit non excepturi magnam quas,
-            <strong> sit sequi odit dicta architecto </strong> provident sapiente nisi autem ab.</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem ab suscipit perspiciatis!</p>
-        <a href="https://google.com"></a>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Lorem ipsum dolor sit,
+                <strong class="destaque_titulo"> sit sequi odit dicta </strong> provident sapiente nisi autem ab.
+            </h1>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem ab
+                suscipit perspiciatis!</p>
+            <div class="apresentacao__links">
+                <h2 class="apresentacao__links__subtitulo">Links para acessar</h2>
+                <a class="apresentacao__links__google" href="https://google.com" target="_blank">Google</a>
+                <a class="apresentacao__links__google" href="https://google.com">Google 2</a>
+            </div>
+        </section>
+        <img class="apresentacao__imagem" src="https://s1.static.brasilescola.uol.com.br/be/conteudo/images/imagem-em-lente-convexa.jpg"
+            alt="">
     </main>
 
-<!--
+
+
+
+
+
+    <!--
     <div class="container form-control mt-5">
         <div class="row m-3">
             <input class="col me-3" type="button" value="botao1">
