--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu_link" href="https://google.com.br">Home</a>
-            <a class="cabecalho__menu_link" href="https://google.com.br">Home 2</a>
+            <a class="cabecalho__menu_link" href="about.html">Sobre nós</a>
         </nav>
     </header>
 
