--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem ab
                 suscipit perspiciatis!</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Links para acessar</h2>
+                <h2 class="apresentacao__links__subtitulo">Nossas Redes Sociais</h2>
                 <a class="apresentacao__links__google" href="https://google.com" target="_blank">
-                    <img class="apresentacao__links__imagem" src="/assets/Google.png" alt="">
-                    Google</a>
+                    <img class="apresentacao__links__imagem" src="/assets/instagram_ico.png" alt="">
+                    Instagram</a>
                 <a class="apresentacao__links__google" href="https://google.com">
-                    <img class="apresentacao__links__imagem" src="/assets/Google.png" alt="">
-                    Google 2
+                    <img class="apresentacao__links__imagem" src="/assets/facebook_ico.png" alt="">
+                    Facebook
+                </a>
+                <a class="apresentacao__links__google" href="https://google.com">
+                    <img class="apresentacao__links__imagem" src="/assets/twitter_ico.png" alt="">
+                    Twitter
                 </a>
             </div>
         </section>
