--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu_link" href="https://google.com.br">Home</a>
             <a class="cabecalho__menu_link" href="about.html">Sobre nós</a>
+            <a class="cabecalho__menu_link" href="/login.html">Login</a>
         </nav>
     </header>
 
