--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por Jeromel</p>
+        <p>Dsenvolvido por Jeromel</p>
     </footer>
 
 
