--- a/login.html
+++ b/login.html
@@ -28,11 +28,14 @@
                 <label for="">Senha</label>
                 <input class="login__container__text" type="text">
             </div>
-            <hr>
+            <hr class="login__container__separador">
             <div class="login__container__botoes">
                 <input class="login__container__botao" type="button" value="Login">
                 <label for="">ou</label>
                 <input class="login__container__botao" type="button" value="Cadastre-se">
+            </div>
+            <div>
+                <a class="login__container__recuperarSenha" href="">Recuperar Senha</a>
             </div>
         </form>
     </main>
