--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     -->
     <link rel="stylesheet" href="/styles/style.css">
-    <title>Document</title>
+    <title>Main</title>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
 
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu_link" href="https://google.com.br">Home</a>
-            <a class="cabecalho__menu_link" href="about.html">Sobre nós</a>
+            <a class="cabecalho__menu_link" href="/index.html">Home</a>
+            <a class="cabecalho__menu_link" href="/about.html">Sobre nós</a>
             <a class="cabecalho__menu_link" href="/login.html">Login</a>
         </nav>
     </header>
@@ -57,33 +57,6 @@
     <footer class="rodape">
         <p>Dsenvolvido por Jeromel</p>
     </footer>
-
-
-
-
-
-
-    <!--
-    <div class="container form-control mt-5">
-        <div class="row m-3">
-            <input class="col me-3" type="button" value="botao1">
-            <input class="col me-3" type="button" value="botao1">
-            <input class="col me-3" type="button" value="botao1">
-        </div>
-
-        <div class="row m-3">
-            <input class="col me-3 btn btn-outline-dark" type="button" value="Botao">
-            <input class="col me-3" type="button" value="botao1">
-            <input class="col me-3" type="button" value="botao1">
-        </div>
-    </div>
--->
-
-
-
-
-
-
 </body>
 
 </html>
