--- a/login.html
+++ b/login.html
@@ -10,36 +10,36 @@
 </head>
 <body>
 
-    <header class="cabecalho">
-        <nav class="cabecalho__menu">
-            <a class="cabecalho__menu_link" href="/index.html">Home</a>
-            <a class="cabecalho__menu_link" href="about.html">Sobre nós</a>
-            <a class="cabecalho__menu_link" href="/login.html">Login</a>
-        </nav>
-    </header>
 
-    <main class="login">
-        <form class="login__container" action="">
-            <div class="login__container__username">
-                <label for="">Login</label>
-                <input class="login__container__text" type="text">
-            </div>
-            <div class="login__container__username">
-                <label for="">Senha</label>
-                <input class="login__container__text" type="text">
-            </div>
-            <hr class="login__container__separador">
-            <div class="login__container__botoes">
-                <input class="login__container__botao" type="button" value="Login">
-                <label for="">ou</label>
-                <input class="login__container__botao" type="button" value="Cadastre-se">
-            </div>
-            <div>
-                <a class="login__container__recuperarSenha" href="">Recuperar Senha</a>
-            </div>
-        </form>
+    <main class="login__geral">
+
+        <section class="login__geral__imagem">
+            <a class="cabecalho__menu__link" href="/index.html">Home</a>
+        </section>
+
+        <section class="login">
+            <form class="login__container" action="">
+                <div class="login__container__username">
+                    <label for="">Login</label>
+                    <input class="login__container__text" type="text">
+                </div>
+                <div class="login__container__username">
+                    <label for="">Senha</label>
+                    <input class="login__container__text" type="text">
+                </div>
+                <hr class="login__container__separador">
+                <div class="login__container__botoes">
+                    <input class="login__container__botao" type="button" value="Login">
+                    <label for="">ou</label>
+                    <input class="login__container__botao" type="button" value="Cadastre-se">
+                </div>
+                <div>
+                    <a class="login__container__recuperarSenha" href="">Recuperar Senha</a>
+                </div>
+            </form>
+     </section> 
     </main>
-    
+
     <footer class="rodape"></footer>
 
     
