--- a/about.html
+++ b/about.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Sobre nós</title>
 </head>
 <body>
-    
+
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu_link" href="/index.html">Home</a>
+            <a class="cabecalho__menu_link" href="/about.html">Sobre nós</a>
+            <a class="cabecalho__menu_link" href="/login.html">Login</a>
+        </nav>
+    </header>
+
+
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit eaque facilis assumenda, sit nobis quisquam ipsum ratione molestiae exercitationem qui quasi, saepe nisi ducimus perspiciatis. Ad itaque sunt error similique.</p>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit fugit unde optio ullam distinctio facere cum eligendi odio aspernatur, voluptatibus similique fuga dolor, placeat eveniet illo minus voluptas repudiandae officia.</p>
+        </section>
+        <img class="apresentacao__imagem" src="/assets/menu.png"
+            alt="img_menu">
+    </main>
+
+
+    <footer class="rodape">
+        <p>Dsenvolvido por Jeromel</p>
+    </footer>
+
 </body>
 </html>
