--- a/login.html
+++ b/login.html
@@ -13,10 +13,13 @@
 
     <main class="login__geral">
 
-        <section class="login__geral__imagem">
-            <a class="cabecalho__menu__link" href="/index.html">Home</a>
-        </section>
-
+        <header class="cabecalho">
+            <nav class="cabecalho__menu">
+                <a class="cabecalho__menu_link" href="/index.html">Home</a>
+                <a class="cabecalho__menu_link" href="/about.html">Sobre nós</a>
+                <a class="cabecalho__menu_link" href="/login.html">Login</a>
+            </nav>
+        </header>
         <section class="login">
             <form class="login__container" action="">
                 <div class="login__container__username">
