--- a/login.html
+++ b/login.html
@@ -32,9 +32,10 @@
                 </div>
                 <hr class="login__container__separador">
                 <div class="login__container__botoes">
-                    <input class="login__container__botao" type="button" value="Login">
+                    <a class="login__container__botao" href="./menu_config.html">Login</a>
                     <label for="">ou</label>
-                    <input class="login__container__botao" type="button" value="Cadastre-se">
+                    <a class="login__container__botao" href="./menu_config.html">Cadastre-se</a>
+                    <!-- <a class="login__container__botao" type="button" value="Cadastre-se"> -->
                 </div>
                 <div>
                     <a class="login__container__recuperarSenha" href="">Recuperar Senha</a>
