--- a/menu_config.html
+++ b/menu_config.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     
-
-    <header>
-        <section class="container">
+    <header class="container">
+        <section>
             <section class="container__colunas">
                 <a class="container__colunas__botoes" href="">
                     <img src="/assets/botoes/botao_historico.png" alt="">Histórico
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="/alarme.html">
                     <img src="/assets/botoes/botao_notificacao.png" alt="">Alarmes
                 </a>
                 <a class="container__colunas__botoes"  href="">
