--- a/alarme.html
+++ b/alarme.html
@@ -41,9 +41,16 @@
         <div class="bloco__nao__mexivel"></div>
 
         <div class="bloco__mexivel">
-            <div style="display: flex; justify-content: center; color: black;">AAAAAAAAAA</div>
-            <div style="display: flex; justify-content: center; color: black;">AAAAAAAAAA</div>
-            <div style="display: flex; justify-content: center; color: black;">AAAAAAAAAA</div>
+            <div class="bloco__mexivel__elemento">
+                <button>botão</button>
+                <input type="date" name="" id="">
+                <input type="datetime" name="" id="">
+            </div>
+            <div class="bloco__mexivel__elemento">AAAAAAAAAA</div>
+            <div class="bloco__mexivel__elemento">AAAAAAAAAA</div>
+            <div class="bloco__mexivel__elemento">AAAAAAAAAA</div>
+            <div class="bloco__mexivel__elemento">AAAAAAAAAA</div>
+            <div class="bloco__mexivel__elemento">AAAAAAAAAA</div>
 
         </div>
     </main>
