--- a/menu_config.html
+++ b/menu_config.html
@@ -12,22 +12,22 @@
     <header class="container">
         <section>
             <section class="container__colunas">
-                <a class="container__colunas__botoes" href="">
+                <a class="container__colunas__botoes" href="historico.html">
                     <img src="/assets/botoes/botao_historico.png" alt="">Histórico
                 </a>
                 <a class="container__colunas__botoes"  href="/alarme.html">
                     <img src="/assets/botoes/botao_notificacao.png" alt="">Alarmes
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="alterar_parametros.html">
                     <img src="/assets/botoes/botao_parametros.png" alt="">Alterar Parâmetros
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="vis_tempo_real.html">
                     <img src="/assets/botoes/botao_visualizar.png" alt="">Visualização em Tempo Real
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="manual.html">
                     <img src="/assets/botoes/botao_manual.png" alt=""> Manual
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="manutencao.html">
                     <img src="/assets/botoes/botao_manutencao.png" alt="">Manutenção
                 </a>
                 <a class="container__colunas__botoes" href="/login.html">Sair
@@ -38,7 +38,13 @@
     </header>
 
     <main>
-        
+        <div class="bloco__nao__mexivel"></div>
+
+        <div class="bloco__mexivel">
+            
+            <div class="bloco__mexivel__elemento"><h3>Selecione uma categoria ao lado</h3></div>
+
+        </div>
     </main>
 
     <footer></footer>
