--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
 
     <footer class="rodape">
-        <p>Dsenvolvido por Jeromel</p>
+        <p>Desenvolvido por César, Iago e Matheus | 5º Semestre ADS - DSW</p>
     </footer>
 
 </body>
