--- a/historico.html
+++ b/historico.html
@@ -17,16 +17,16 @@
                 <a class="container__colunas__botoes"  href="alarme.html">
                     <img src="/assets/botoes/botao_notificacao.png" alt="">Alarmes
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="alterar_parametros.html">
                     <img src="/assets/botoes/botao_parametros.png" alt="">Alterar Parâmetros
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="vis_tempo_real.html">
                     <img src="/assets/botoes/botao_visualizar.png" alt="">Visualização em Tempo Real
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="manual.html">
                     <img src="/assets/botoes/botao_manual.png" alt=""> Manual
                 </a>
-                <a class="container__colunas__botoes"  href="">
+                <a class="container__colunas__botoes"  href="manutencao.html">
                     <img src="/assets/botoes/botao_manutencao.png" alt="">Manutenção
                 </a>
                 <a class="container__colunas__botoes" href="/login.html">Sair
