--- a/alarme.html
+++ b/alarme.html
@@ -16,7 +16,7 @@
                 <a class="container__colunas__botoes" href="historico.html">
                     <img src="/assets/botoes/botao_historico.png" alt="">Histórico
                 </a>
-                <a class="container__colunas__botoes__botao__selecionado"  href="">
+                <a class="container__colunas__botoes__botao__selecionado"  href="alarme.html">
                     <img src="/assets/botoes/botao_notificacao.png" alt="">Alarmes
                 </a>
                 <a class="container__colunas__botoes"  href="alterar_parametros.html">
