--- a/alterar_parametros.html
+++ b/alterar_parametros.html
@@ -18,7 +18,7 @@
                 <a class="container__colunas__botoes"  href="alarme.html">
                     <img src="/assets/botoes/botao_notificacao.png" alt="">Alarmes
                 </a>
-                <a class="container__colunas__botoes__botao__selecionado"  href="">
+                <a class="container__colunas__botoes__botao__selecionado"  href="alterar_parametros.html">
                     <img src="/assets/botoes/botao_parametros.png" alt="">Alterar Parâmetros
                 </a>
                 <a class="container__colunas__botoes"  href="vis_tempo_real.html">
