--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Dsenvolvido por Jeromel</p>
+        <p>Desenvolvido por César, Iago e Matheus | 5º Semestre ADS - DSW</p>
     </footer>
 </body>
 
