--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 suscipit perspiciatis!</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Nossas Redes Sociais</h2>
-                <a class="apresentacao__links__navegacao" href="https://google.com" target="_blank">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com" target="_blank">
                     <img class="apresentacao__links__imagem" src="/assets/instagram_ico.png" alt="">
                     Instagram</a>
-                <a class="apresentacao__links__navegacao" href="https://google.com">
+                <a class="apresentacao__links__navegacao" href="https://facebook.com">
                     <img class="apresentacao__links__imagem" src="/assets/facebook_ico.png" alt="">
                     Facebook
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://google.com">
+                <a class="apresentacao__links__navegacao" href="https://twitter.com">
                     <img class="apresentacao__links__imagem" src="/assets/twitter_ico.png" alt="">
                     Twitter
                 </a>
