--- a/login.html
+++ b/login.html
@@ -32,9 +32,9 @@
                 </div>
                 <hr class="login__container__separador">
                 <div class="login__container__botoes">
-                    <a class="login__container__botao" href="/menu_config.html">Login</a>
+                    <a class="login__container__botao" type="button" href="/menu_config.html">Login</a>
                     <label for="">ou</label>
-                    <a class="login__container__botao" href="/menu_config.html">Cadastre-se</a>
+                    <a class="login__container__botao" type="button" href="/menu_config.html">Cadastre-se</a>
                     <!-- <a class="login__container__botao" type="button" value="Cadastre-se"> -->
                 </div>
                 <div>
