--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="/assets/menu.png"
+        <img class="apresentacao__imagem" src="/assets/logo.jpg"
             alt="img_menu">
     </main>
 
