--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <h1 class="apresentacao__conteudo__titulo">Sobre nós</h1>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit eaque facilis assumenda, sit nobis quisquam ipsum ratione molestiae exercitationem qui quasi, saepe nisi ducimus perspiciatis. Ad itaque sunt error similique.</p>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit fugit unde optio ullam distinctio facere cum eligendi odio aspernatur, voluptatibus similique fuga dolor, placeat eveniet illo minus voluptas repudiandae officia.</p>
         </section>
-        <img class="apresentacao__imagem" src="/assets/menu.png"
+        <img class="apresentacao__imagem" src="/assets/logo.jpg"
             alt="img_menu">
     </main>
 
