--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     -->
     <link rel="stylesheet" href="/styles/style.css">
-    <title>Main</title>
+    <title>CIV - Principal</title>
 </head>
 
 <body>
