--- a/alterar_parametros.html
+++ b/alterar_parametros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/menu_config.css">
-    <title>Document</title>
+    <title>Parâmetros</title>
 </head>
 <body>
 
