--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="icon" href="assets/icons/icon_tab.ico">
     <title>Sobre nós</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu_link" href="/index.html">Home</a>
             <a class="cabecalho__menu_link" href="/about.html">Sobre nós</a>
+            <a class="cabecalho__menu_link" href="/planos.html">Planos</a>
             <a class="cabecalho__menu_link" href="/login.html">Login</a>
         </nav>
     </header>
@@ -23,7 +25,17 @@
             <h1 class="apresentacao__conteudo__titulo">Sobre nós</h1>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit eaque facilis assumenda, sit nobis quisquam ipsum ratione molestiae exercitationem qui quasi, saepe nisi ducimus perspiciatis. Ad itaque sunt error similique.</p>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit fugit unde optio ullam distinctio facere cum eligendi odio aspernatur, voluptatibus similique fuga dolor, placeat eveniet illo minus voluptas repudiandae officia.</p>
+            
+            <span></span>
+
+            <p class="apresentacao__conteudo__titulo__contato">Contato</p>
+
+            <li class="apresentacao__conteudo__contato"> <img  src="assets/icons/Whatsapp_icon.ico" alt=""> (19) 99999-9999</li>
+            <li class="apresentacao__conteudo__contato"> <img  src="assets/icons/tel_icon.ico" alt=""> (19) 9999-9999</li>
+            <li class="apresentacao__conteudo__contato"> <img  src="assets/icons/email_icon.ico" alt=""><a class="apresentacao__conteudo__contato" href="mailto:email@civ.com.br">email@civ.com.br</a></li>
+
         </section>
+        
         <img class="apresentacao__imagem" src="/assets/logo.jpg"
             alt="img_menu">
     </main>
