--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     -->
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="icon" href="assets/icons/icon_tab.ico">
     <title>CIV - Principal</title>
 </head>
 
@@ -24,6 +25,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu_link" href="/index.html">Home</a>
             <a class="cabecalho__menu_link" href="/about.html">Sobre nós</a>
+            <a class="cabecalho__menu_link" href="/planos.html">Planos</a>
             <a class="cabecalho__menu_link" href="/login.html">Login</a>
         </nav>
     </header>
