--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="assets/icons/icon_tab.ico">
     <link rel="stylesheet" href="/styles/login.css">
     <title>Login</title>
 </head>
@@ -17,6 +17,7 @@
             <nav class="cabecalho__menu">
                 <a class="cabecalho__menu_link" href="/index.html">Home</a>
                 <a class="cabecalho__menu_link" href="/about.html">Sobre nós</a>
+                <a class="cabecalho__menu_link" href="/planos.html">Planos</a>
                 <a class="cabecalho__menu_link" href="/login.html">Login</a>
             </nav>
         </header>
