--- a/planos.html
+++ b/planos.html
@@ -39,7 +39,8 @@
 
                 <div class="planos__caixas__conteudo__infos">
                     <h4 style="text-decoration: line-through;">R$599,99</h4>
-                    <h2>R$169,99</h2>
+                    <h2 style="font-size: 2.0rem;">R$169,99</h2>
+                    <h4>Por mês</h4>
                 </div>
 
                 <div class="planos__caixas__conteudo__botoes">
@@ -72,8 +73,11 @@
                 <hr class="planos__caixas__hr">
 
                 <div class="planos__caixas__conteudo__infos">
-                    <h4 style="text-decoration: line-through;">R$1599,99</h4>
-                    <h1>R$899,99</h1>
+                    
+                    <h4 style="text-decoration: line-through;">R$1599,99</h4> 
+                    <h1 style="font-size: 2.5rem;">R$899,99</h1>
+                    <h3>Por mês</h3>
+                    
                 </div>
 
                 <div class="planos__caixas__conteudo__botoes">
@@ -105,7 +109,8 @@
 
                 <div class="planos__caixas__conteudo__infos">
                     <h4 style="text-decoration: line-through;">R$999,99</h4>
-                    <h2>R$459,99</h2>
+                    <h2 style="font-size: 2.0rem;">R$459,99</h2>
+                    <h4>Por mês</h4>
                 </div>
 
                 <div class="planos__caixas__conteudo__botoes">
