--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Latest compiled and minified CSS 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    -->
-    <!-- Latest compiled JavaScript 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    -->
+    <!--Para acessar o site hospedado em 'Vercel', acesse 'trabalho-dsw.vercel.app'-->
+    
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="assets/icons/icon_tab.ico">
     <title>CIV - Principal</title>
